<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_content_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />
    <!-- Icono de usuario -->

    <!-- Texto de Bienvenida -->
    <ImageView
            android:id="@+id/user_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/user_icon"
            android:contentDescription="@string/user_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo de correo -->
    <EditText
            android:id="@+id/email"
            android:layout_width="381dp"
            android:layout_height="77dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo de contraseña -->

    <!-- Botón de iniciar sesión -->

    <!-- Enlace de contraseña olvidada -->
    <EditText
            android:id="@+id/password"
            android:layout_width="376dp"
            android:layout_height="75dp"
            android:layout_marginTop="28dp"
            android:text="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/sign_in_button"
            android:layout_width="326dp"
            android:layout_height="45dp"
            android:layout_marginTop="48dp"
            android:text="@string/sign_in_button"
            android:background="@color/boton_color"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.49"/>
    <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
