<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".MyAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_color"
            app:layout_collapseMode="pin">

        <!-- Contenedor imagen y el texto -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/mi_logo"
                    android:contentDescription="@string/app_name"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:id="@+id/appium_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="APPIUM"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:gravity="center_vertical"/>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/tarjeta"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="104dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/card_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_tarjeta_oculto"
                            android:textColor="@android:color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_centerInParent="true"/>

                    <TextView
                            android:id="@+id/card_holder_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Nombre"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="306dp"
                            android:layout_marginTop="134dp"/>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                    android:id="@+id/available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo_disponible"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/card_view"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"/>

            <TextView
                    android:id="@+id/balance_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo_numerico"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/available_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/balance_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="40dp">

                    <FrameLayout
                            android:layout_width="79dp"
                            android:layout_height="72dp"
                            android:gravity="center">

                        <ImageView
                                android:layout_width="90dp"
                                android:layout_height="61dp"
                                android:src="@drawable/ic_transferencia"
                                android:contentDescription="@string/transferencia"/>

                        <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/transferencia"
                                android:onClick="onTransferenciaClick"/>
                    </FrameLayout>
                    <TextView
                            android:text="@string/transferencia"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="40dp">

                    <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                        <ImageView
                                android:layout_width="140dp"
                                android:layout_height="58dp"
                                android:src="@drawable/ic_retiro"
                                android:contentDescription="@string/retiro"/>

                        <ImageButton
                                android:layout_width="112dp"
                                android:layout_height="64dp"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/retiro"
                                android:onClick="onRetiroClick"/>
                    </FrameLayout>
                    <TextView
                            android:text="@string/retiro"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                    android:id="@+id/notifications_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historial"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/balance_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="120dp"
                    android:layout_marginStart="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notifications_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/notifications_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
