 <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".Mi_cuenta">

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:navGraph="@navigation/nav_graph"
            app:defaultNavHost="true" />

    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black3"
            app:layout_collapseMode="pin">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/mi_logo"
                    android:contentDescription="@string/app_name"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp" />

            <TextView
                    android:id="@+id/appium_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="APPIUM"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:gravity="center_vertical" />
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <LinearLayout
                    android:id="@+id/card_view"
                    android:layout_width="387dp"
                    android:layout_height="173dp"
                    android:background="@drawable/tajetapp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="96dp" app:layout_constraintHorizontal_bias="0.333">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/card_holder_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Nombre"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"/>

                <TextView
                        android:id="@+id/card_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numero_tarjeta_oculto"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Saldo disponible"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/card_view"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"/>

            <TextView
                    android:id="@+id/balance_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0.00"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/available_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/balance_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <!-- Transfer Button -->
                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp">

                    <FrameLayout
                            android:layout_width="79dp"
                            android:layout_height="72dp"
                            android:gravity="center">

                        <ImageView
                                android:layout_width="90dp"
                                android:layout_height="61dp"
                                android:src="@drawable/ic_transferencia"
                                android:contentDescription="@string/transferencia"/>

                        <ImageButton
                                android:id="@+id/transferButton"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/transferencia"
                                android:onClick="onTransferenciaClick"/>
                    </FrameLayout>

                    <TextView
                            android:text="@string/transferencia"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <!-- Retiro Button -->
                <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp">

                    <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"/>

                </LinearLayout>
            </LinearLayout>

            <TextView

                    android:id="@+id/notifications_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historial"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/balance_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="120dp"
                    android:layout_marginStart="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notifications_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/notifications_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="16dp" app:layout_constraintHorizontal_bias="0.0"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

